# learn-cmake

./: LICENSE
3-hello-raylib/: CMakeLists.txt  README.md  build_script.sh
3-hello-raylib/.cache/clangd/index/: Main.cpp.5AD70BECB696825B.idx
ch2-hello-cmake/: CMakeLists.txt  Main.cpp  README.md
ch3-multi-src/: CMakeLists.txt
ch3.2-exercises/: CMakeLists.txt  Main.cpp  PrintGoodBye.cpp  PrintGoodBye.h
ch4-hello-raylib/: CMakeLists.txt
ch4-hello-raylib/src/: Main.cpp
multi-src/: CMakeLists.txt  Hello.cpp  Hello.h  Main.cpp  README.md
